Serif font placeholder

--- a/themes/burns-exhibits/assets/sass/exhibit-list.scss
+++ b/themes/burns-exhibits/assets/sass/exhibit-list.scss
@@ -13,8 +13,8 @@
     margin-bottom: .75em;
     list-style: none;
     margin-left: 0;
-    font-weight: 600;
-    color: black
+    color: black;
+    font-family: $font-family-serif;
 }
 
 .exhibit-list__subtitle {
