--- a/themes/burns-exhibits/assets/sass/variables.scss
+++ b/themes/burns-exhibits/assets/sass/variables.scss
@@ -1,5 +1,6 @@
 /* Redefined values from bootstrap */
 $font-family-sans-serif:      "Open Sans", sans-serif !default;
+$font-family-serif:   "Lora", serif !default;
 
 /* Bootstrap default font size. 1.125rem == 18px usually */
 $font-size-base: 1.125rem !default;
