--- a/themes/burns-exhibits/layouts/partials/head.html
+++ b/themes/burns-exhibits/layouts/partials/head.html
@@ -17,7 +17,7 @@
   <meta NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   {{ end }}
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:300,400,400i,600,700&display=swap" rel="stylesheet">
 
   {{ $style := resources.Get "sass/style.scss" | resources.ToCSS |  resources.Minify | resources.Fingerprint }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
