--- a/themes/burns-exhibits/layouts/index.html
+++ b/themes/burns-exhibits/layouts/index.html
@@ -1,5 +1,5 @@
-{{ define "main" }}
-  <main>
-    {{ partial "exhibit-list" . }}
-  </main>
+{{ define "homepage" }}
+
+		{{- partial "homepage-gallery.html" . -}}
+
 {{ end }}
