--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
     <header class="row">
         <div class="col-md-12">
             {{- partial "library-header.html" . -}}
+            {{- partial "blackbar.html" . -}}
         </div>
     </header>
 
