--- a/themes/burns-exhibits/layouts/partials/footer.html
+++ b/themes/burns-exhibits/layouts/partials/footer.html
@@ -73,10 +73,10 @@
                 <div id="socialmedia" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <h4>Connect With Us</h4>
                     <ul>
-                        <li><a href="https://johnjburnslibrary.wordpress.com" title="Burns Library Blogs"><span class="fa fa-wordpress"></span><span class="accessibility-text">Blogs</span></a></li>
-                        <li><a href="https://facebook.com/johnjburnslibrary/" title="Burns Library Facebook" class="fa fa-facebook-f"><span class="accessibility-text">Facebook</span></a></li>
-                        <li><a href="https://www.instagram.com/bcburnslibrary/?hl=en" title="Burns Library on Instagram" class="fa fa-instagram" id="media_instagram"><span class="accessibility-text">Instagram</span></a></li>
-                        <li><a href="https://twitter.com/burnslibrary" title="Follow the Burns Libraries on Twitter" class="fa fa-twitter" id="media_twitter"><span class="accessibility-text">Twitter</span></a></li>
+                        <li><a href="https://johnjburnslibrary.wordpress.com" title="Burns Library Blogs"><i class="fab fa-wordpress"></i><span class="accessibility-text">Blogs</span></a></li>
+                        <li><a href="https://facebook.com/johnjburnslibrary/" title="Burns Library Facebook"><i class="fab fa-facebook-f"></i><span class="accessibility-text">Facebook</span></a></li>
+                        <li><a href="https://www.instagram.com/bcburnslibrary/?hl=en" title="Burns Library on Instagram"><i class="fab fa-instagram"></i><span class="accessibility-text">Instagram</span></a></li>
+                        <li><a href="https://twitter.com/burnslibrary" title="Follow the Burns Libraries on Twitter"><i class="fab fa-twitter"></i><span class="accessibility-text">Twitter</span></a></li>
                     </ul>
                 </div>
 
