--- a/themes/burns-exhibits/layouts/partials/homepage-gallery.html
+++ b/themes/burns-exhibits/layouts/partials/homepage-gallery.html
@@ -7,7 +7,7 @@
        text-align: center;
        width: 100%;
        padding: 15px 0;
-       margin: 0 0 25px 0;
+       margin: 50px 0 25px 0;
     }
 
     .intro p {
@@ -24,6 +24,10 @@
         font-size: 1.7rem;
         border-bottom: 2px solid black;
         margin-bottom: 25px;
+    }
+
+    .past_exhibits {
+        margin-bottom: 1.5em;
     }
 
     .past_exhibits h4 {
