--- a/themes/burns-exhibits/layouts/partials/library-header.html
+++ b/themes/burns-exhibits/layouts/partials/library-header.html
@@ -12,7 +12,7 @@
                         <ul class="bclib-header-links">
                             <li><a href="https://bc.edu">BC Home</a></li>
                             <li><a href="https://www.bc.edu/bc-web/about/mission.html">Mission</a></li>
-                            <li><a href="https://library.bc.edu/feedback"><span class="fa fa-commenting-o" aria-hidden="true"></span> Feedback</a></li>
+                            <li><a href="https://library.bc.edu/feedback"><span class="far fa-comment-dots" aria-hidden="true" style="font-size: 14px;"></span> Feedback</a></li>
                         </ul>
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-5 col-xxs input-wrapper">
