Center large images. Fixes #31

--- a/themes/burns-exhibits/assets/sass/shortcodes/large-gallery-figure.scss
+++ b/themes/burns-exhibits/assets/sass/shortcodes/large-gallery-figure.scss
@@ -58,7 +58,18 @@
     }
 
     figure {
+
         @extend .col-md-12;
+
+        width: -webkit-min-content;
+        width: -moz-min-content;
+        width: min-content;
+        margin: 0 auto;
+        max-width: max-content;
+
+        img {
+            max-width: initial;
+        }
     }
 }
 
