Add front image portrait layout. Fixes #29

--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -20,6 +20,9 @@
 // Modal window (lightbox)
 @import 'modal';
 
+// Exhibit
+@import 'exhibit-main-page';
+
 main {
 
     /* Common styles for all figures. */
