--- a/themes/burns-exhibits/assets/css/footer.css
+++ b/themes/burns-exhibits/assets/css/footer.css
@@ -9,7 +9,9 @@ footer {
     z-index: 4;
     position: relative;
     padding-top: 2em;
+    margin-top: 2em;
 }
+
 footer ul {
     list-style: none;
     margin: 0;
