--- a/themes/burns-exhibits/layouts/partials/head.html
+++ b/themes/burns-exhibits/layouts/partials/head.html
@@ -28,6 +28,9 @@
   {{ $megastyle := resources.Get "css/megamenu.css" }}
   <link rel="stylesheet" href="{{ $megastyle.RelPermalink }}"> 
 
+  {{ $customstyle := resources.Get "css/custom.css" }}
+  <link rel="stylesheet" href="{{ $customstyle.RelPermalink }}"> 
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
