--- a/themes/burns-exhibits/layouts/partials/homepage-gallery.html
+++ b/themes/burns-exhibits/layouts/partials/homepage-gallery.html
@@ -1,107 +1,3 @@
-<style>
-    .main-page-stuff, .breadcrumb {
-        display: none;
-    }
-
-    .homepage .intro {
-       text-align: center;
-       width: 100%;
-       padding: 15px 0;
-       margin: 50px 0 25px 0;
-    }
-
-    .intro p {
-        font-size: .95em;
-        line-height: .75;
-    }
-
-    .current_exhibits {
-        text-align: left;
-        margin-bottom: 15px;
-    }
-
-    .current_exhibits h3 {
-        font-size: 1.7rem;
-        border-bottom: 2px solid black;
-        margin-bottom: 25px;
-    }
-
-    .past_exhibits {
-        margin-bottom: 1.5em;
-    }
-
-    .past_exhibits h4 {
-        font-size: 1.5rem;
-        border-bottom: 2px solid black;
-        margin: 1.2em 0 1em 0;
-    }
-
-    .hp_img {
-        position: relative;
-        display: inline-block;
-        width: 100%;
-        border: 2px solid #b29d6c;
-    }
-
-    .current_exhibits .hp_img {
-        min-height: 275px;
-        background-position: 50% 50% !important;
-        background-size: cover;
-    }
-
-    .past_exhibits .hp_img {
-        min-height: 200px;
-        background-position: 50% 0% !important;
-        background-size: cover;
-    }
-
-    .hp_title {
-        position: absolute;
-        border-top: 2px solid #b29d6c;
-        padding: 5px 0;
-        text-align: center;
-        left: 0;
-        right: 0;
-        bottom: 0;
-    }
-    .current_exhibits .hp_title {
-        min-height: 50px;
-    }
-
-    .past_exhibits .hp_title {
-        min-height: 25px;
-     }
-
-    .current_exhibits a .hp_title {
-        font-size: 2rem;
-    }
-
-    .past_exhibits a .hp_title {
-        font-size: 1rem;
-    }
-
-    a .hp_title {
-        color: black;
-        font-size: 2rem;
-        background: rgba(255,255,255,.9);
-        transition: ease .5s;
-    }
-
-    a:hover .hp_title, a:active .hp_title {
-        background: rgba(255,255,255,1);
-        color: #430000;
-    }
-
-    .oldgallery {
-        margin: 0 0 1.5em 0;
-    }
-
-    /* SILLY HACK TO HIGHLIGHT FIRST 2 CHILDREN OF OLD GALLERY */
-
-    .oldgallery:nth-child(n+1):nth-child(-n+4) {
-        display: none;
-    }
-</style>
 
 <!-- TITLE AND INTRO -->
 <div class="row intro">
@@ -110,14 +6,15 @@
         <h2>Burns Online Exhibits</h2>
     </div>
 
-    <div class="col-md-12">
-    <p>Engage with <a href="https://libguides.bc.edu/burns">Burns Library's</a> rare books, special collections, and archives.</p>
+    <div class="col-md-2">&nbsp;</div>
+    <div class="col-md-8">
+    <p>John J. Burns Library develops and promotes exhibits featuring a wide variety of special collection formats, topics, and community interests. While we encourage everyone to <a href="https://libguides.bc.edu/burns/visit">visit our current exhibits</a> in person, online versions allow those unable to come to Chestnut Hill to engage with our special collections.</p>
 
-    <p>Have a question? <a href="https://libguides.bc.edu/burns/contact">Contact us</a> to learn more about our collection material.</p>
+    <p>Have a question? <a href="https://libguides.bc.edu/burns/contact">Contact us</a>.</p>
 
-    <p>For updates on happenings at Burns Library, <a href="https://www.us10.list-manage.com/subscribe?u=7a6431091bc9d4cb794b1d7ae&id=e9d970e0a9">join our mailing list</a>. </p>
-    <p>[add something/link about/to digital collections]</p>
+    <p>Want to know what is happening at Burns Library? <a href="https://www.us10.list-manage.com/subscribe?u=7a6431091bc9d4cb794b1d7ae&id=e9d970e0a9">Join our mailing list</a>. </p>
     </div>
+    <div class="col-md-2">&nbsp;</div>
 
 </div>
 <!-- END TITLE AND INTRO -->
@@ -165,11 +62,10 @@
 
     <!-- A BUNCH OF OLDER EXHIBITS -->
     {{ range $allthepages | first 20 | }}
-    {{ $img := .Params.front_image }}  
 
         <div class="col-md-3 col-6 oldgallery">
             <a href="{{ .RelPermalink }}" class="hp_img" 
-            style="background:url({{ .RelPermalink }}{{ $img }})">
+            style="background:url({{ .RelPermalink }}tile-square.jpg)">
                 <span class="hp_title">
                     {{.Params.exhibit_title}}
                 </span>    
