--- a/themes/burns-exhibits/assets/css/custom.css
+++ b/themes/burns-exhibits/assets/css/custom.css
@@ -7,10 +7,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .homepage .intro {
-   text-align: center;
    width: 100%;
    padding: 15px 0;
    margin: 0px 0 25px 0;
+}
+
+.homepage .intro h2 {
+    text-align: center;
 }
 
 .intro p {
