--- a/themes/burns-exhibits/assets/css/footer.css
+++ b/themes/burns-exhibits/assets/css/footer.css
@@ -151,7 +151,7 @@ footer .ihs-logo img {
 #bc-footer {
     background: #501315;
     padding: 15px 0;
-    margin-top: 0px;
+    margin-top: 2em;
     color: #fff;
     font-size: 10px;
     line-height: 11px;
