--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -3,14 +3,19 @@
 {{- partial "head.html" . -}}
 
 <body class="ma0 {{ with getenv "HUGO_ENV" }}{{ . }}{{ end }}">
-    <header class="row">
-        <div class="col-md-12">
-            {{- partial "library-header.html" . -}}
+    
+    <header>
+        <div class="row">
+            <div class="col-md-12">
+                {{- partial "library-header.html" . -}}
+            </div>
+            <div class="col-md-12">
             {{- partial "blackbar.html" . -}}
+            </div>
         </div>
     </header>
 
-    <div class="container">
+    <div class="container content">
         <div class="row">
             <div class="col-md-12">
                 {{- partial "header.html" . -}}
