Added Archive page

--- a/themes/burns-exhibits/assets/css/custom.css
+++ b/themes/burns-exhibits/assets/css/custom.css
@@ -111,7 +111,7 @@ a:hover .hp_title, a:active .hp_title {
     color: #430000;
 }
 
-.oldgallery {
+.oldgallery, .archivegallery {
     margin: 0 0 1.5em 0;
 }
 
