--- a/themes/burns-exhibits/layouts/archive/all.html
+++ b/themes/burns-exhibits/layouts/archive/all.html
@@ -15,35 +15,44 @@
         </div>
     </header>
 
-    <div class="container content">
-            <div class="row">
-                <div class="col-md-12">
-                    {{- partial "header.html" . -}}
-                </div>
-            </div>
-
-    <!-- SINGLE ENTRY -->
-            <div class="row main-page-stuff">
-            <div class="col-md-3">
-                {{ if ne .Kind "home" }}
-                    {{- partial "menu.html" . -}}
-                {{ end }}
-            </div>
-
-            <main id="content" class="col-md-9">
-                {{- block "main" . }}{{- end }}
-            </main>
-            </div>
-    <!-- END SINGLE ENTRY-->
-
-    <!-- HOMEPAGE ONLY -->
-
-            {{- block "homepage" . }}{{- end }}
-
-    <!-- END HOMEPAGE -->
+<div class="container content">
+	        <div class="row">
+	            <div class="col-md-12">
+	                {{- partial "header.html" . -}}
+	            </div>
+	        </div>
 
 
-    </div>
+	<main id="content" class="col-md-12">
+
+
+	{{ $allthepages := where .Site.Pages "Kind" "section" }}
+
+
+	<div class="row past_exhibits">
+
+	    <div class="col-md-6 col-12">
+	        <h4>All Past Exhibits</h4>
+	    </div>
+
+	    <div class="col-md-6 col-12">&nbsp;</div>
+
+	<!-- A BUNCH OF OLDER EXHIBITS -->
+	{{ range $allthepages  }}
+
+	    <div class="col-md-3 col-6 archivegallery">
+	        <a href="{{ .RelPermalink }}" class="hp_img" 
+	        style="background:url({{ .RelPermalink }}tile-square.jpg)">
+	            <span class="hp_title">
+	                {{.Params.exhibit_title}}
+	            </span>    
+	        </a>
+	    </div>
+	{{ end }}
+
+	</div>
+
+</div>
 
     <footer>
             {{- partial "footer.html" . -}}
