Restore exhibit title and subtitle

--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -19,6 +19,7 @@
         {{ else }}
 
         <!-- SINGLE ENTRY -->
+        {{ block "exhibit-heading" . }}{{ end }}
         <div class="row main-page-stuff">
             <div class="col-md-3">
                 {{- partial "menu.html" . -}}
