--- a/themes/burns-exhibits/assets/sass/style.scss
+++ b/themes/burns-exhibits/assets/sass/style.scss
@@ -22,6 +22,7 @@
 
 // Exhibit
 @import 'exhibit-main-page';
+@import 'exhibit-heading';
 
 main {
 
@@ -52,6 +53,12 @@ footer {
 
 .exhibit-title {
     @extend .col-md-12;
+}
+
+.page-title {
+    font-size: 24px;
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 h2 {
