--- a/themes/burns-exhibits/layouts/shortcodes/largefigure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/largefigure.html
@@ -12,9 +12,10 @@
 {{ $name := replace (.Get "src") "../" "" }}
 {{ with $raw_img := .Page.CurrentSection.Resources.GetMatch $name }}
 {{ $resized := $raw_img.Resize "600x q80"}}
+{{ $large_image := $raw_img.Fit "1440x1440 q80"}}
 
 {{ $modal_id := $raw_img | urlize }}
-{{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $resized)}}
+{{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $large_image )}}
 
 <div class="large-gallery-figure {{ $size_class }} {{ $align_class }}">
     {{ if eq $align "right" }}
