Fix weird rem problem caused by Bootstrap 3

--- a/themes/burns-exhibits/assets/css/custom.css
+++ b/themes/burns-exhibits/assets/css/custom.css
@@ -40,7 +40,7 @@ header {
 }
 
 .current_exhibits h3 {
-    font-size: 1.7rem;
+    font-size: 25px;
     border-bottom: 2px solid black;
     margin-bottom: 25px;
 }
@@ -50,7 +50,7 @@ header {
 }
 
 .past_exhibits h4 {
-    font-size: 1.5rem;
+    font-size: 24px;
     border-bottom: 2px solid black;
     margin: 1.2em 0 1em 0;
 }
@@ -92,16 +92,16 @@ header {
  }
 
 .current_exhibits a .hp_title {
-    font-size: 2rem;
+    font-size: 32px;
 }
 
 .past_exhibits a .hp_title {
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 a .hp_title {
     color: black;
-    font-size: 2rem;
+    font-size: 32px;
     background: rgba(255,255,255,.9);
     transition: ease .5s;
 }
