--- a/themes/burns-exhibits/layouts/partials/prev-next.html
+++ b/themes/burns-exhibits/layouts/partials/prev-next.html
@@ -2,13 +2,29 @@
     <div class="col-md-6 prev-wrapper">
         {{ if eq .Kind "page" }}
             {{ if .NextInSection }}
-            <a href="{{ .NextInSection.RelPermalink }}" class="prev-link"><i class="nav-arrow nav-arrow--left"></i>{{ .NextInSection.Title }}</a>
+                <a href="{{ .NextInSection.RelPermalink }}" class="prev-link">
+                    <i class="nav-arrow nav-arrow--left"></i>{{ .NextInSection.Title }}
+                </a>
             {{ else }}
                 {{ with .Site.GetPage .Section }}
-                <a href=".." class="prev-link"><i class="nav-arrow nav-arrow--left"></i>{{.Title}}</a>
+                    <a href=".." class="prev-link"><i class="nav-arrow nav-arrow--left"></i>{{.Title}}</a>
                 {{ end }}
             {{ end }}
         {{ end }}
     </div>
 
+    <div class="col-md-6 next-wrapper">
+            {{ if eq .Kind "section" }}
+                {{ range first 1 .Pages }}
+                    <div class="col-md-12">
+                        <a href="{{ .RelPermalink }}" class="next-link">{{ .Title }}<i class="nav-arrow nav-arrow--right"></i></a>
+                    </div>
+                {{ end }}
+            {{ else }}
+                {{ if .PrevInSection }}
+                    <a href="{{ .PrevInSection.RelPermalink }}" class="next-link">{{ .PrevInSection.Title }} <i class="nav-arrow nav-arrow--right"></i></a>
+                {{end}}
+            {{end}}
+        </div>
+        
 </div>
