--- a/themes/burns-exhibits/layouts/partials/modal.html
+++ b/themes/burns-exhibits/layouts/partials/modal.html
@@ -1,9 +1,9 @@
 <div id="lightbox-{{ .modal_id }}" class="modal micromodal-slide" aria-hidden="true">
   <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-    <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+    <div class="modal__container" role="dialog" aria-modal="true">
       <main class="modal__content">
           <button class="modal__close" aria-label="Close modal" data-micromodal-close>X</button>
-        <img class="lightbox__image" src="{{ .img.RelPermalink }}">
+        <img id="image-lightbox-{{ .modal_id }}" class="lightbox__image" data-src="{{ .img.RelPermalink }}">
       </main>
     </div>
   </div>
