--- a/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
+++ b/themes/burns-exhibits/layouts/shortcodes/galleryfigure.html
@@ -12,7 +12,7 @@
 {{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $large_image )}}
 
 {{ $modal_id := $raw_img | urlize }}
-{{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $resized)}}
+{{ $figure_context := (dict "context" . "modal_id" $modal_id "img" $large_image)}}
 <div class="gallery-figure">
     <figure class="gallery-figure__figure">
         <div class="gallery-figure__img_holder">
