--- a/themes/burns-exhibits/layouts/_default/baseof.html
+++ b/themes/burns-exhibits/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ $.Site.LanguageCode | default "en" }}">
 {{- partial "head.html" . -}}
 
-<body class="homepagerefresh ma0 {{ with getenv "HUGO_ENV" }}{{ . }}{{ end }}">
+<body class="homepagerefresh carbfree ma0 {{ with getenv "HUGO_ENV" }}{{ . }}{{ end }}">
 
     {{- partial "library-header.html" . -}}
 
