More relative link strangeness

--- a/themes/burns-exhibits/layouts/archive/all.html
+++ b/themes/burns-exhibits/layouts/archive/all.html
@@ -30,8 +30,8 @@
 	{{ range $allthepages  }}
 
 	    <div class="col-md-3 col-6 archivegallery">
-	        <a href=".{{ .RelPermalink }}" class="hp_img" 
-	        style="background:url(.{{ .RelPermalink }}tile-square.jpg)">
+	        <a href="..{{ .RelPermalink }}" class="hp_img" 
+	        style="background:url(..{{ .RelPermalink }}tile-square.jpg)">
 	            <span class="hp_title">
 	                {{.Params.exhibit_title}}
 	            </span>    
