--- a/themes/burns-exhibits/layouts/partials/footer.html
+++ b/themes/burns-exhibits/layouts/partials/footer.html
@@ -22,13 +22,13 @@
             </div>
 
 <!-- HOURS -->
-           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 hours-wrap">
-                    <!--h4 class="hours"><a href="https://libguides.bc.edu/hours">Hours</a></h4-->
-                    <div class="hours-todays-date"></div>
-                    <h4>This Week's Hours <span id="hours_seperator">|</span> <a href="https://libguides.bc.edu/hours">See All Hours</a></h4>
-                    <!-- LIBCAL HOURS API-->
-                    <div id="weekly_hours_container"><ul class="lib_hoursweekly" id="507"><ul class="dailyhours"><li class="day">Sunday</li><li class="date">Jul 07</li><li class="hours">closed</li></ul><ul class="dailyhours"><li class="day">Monday</li><li class="date">Jul 08</li><li class="hours"><span class="hours-start">9am</span> - <span class="hours-end">5pm</span></li></ul><ul class="dailyhours open today"><li class="day">Tuesday</li><li class="date">Jul 09</li><li class="hours"><span class="hours-start">9am</span> - <span class="hours-end">5pm</span></li></ul><ul class="dailyhours"><li class="day">Wednesday</li><li class="date">Jul 10</li><li class="hours"><span class="hours-start">9am</span> - <span class="hours-end">5pm</span></li></ul><ul class="dailyhours"><li class="day">Thursday</li><li class="date">Jul 11</li><li class="hours"><span class="hours-start">9am</span> - <span class="hours-end">5pm</span></li></ul><ul class="dailyhours"><li class="day">Friday</li><li class="date">Jul 12</li><li class="hours"><span class="hours-start">9am</span> - <span class="hours-end">5pm</span></li></ul><ul class="dailyhours"><li class="day">Saturday</li><li class="date">Jul 13</li><li class="hours">closed</li></ul><span id="nowopen"></span></ul></div>
-                </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 hours-wrap">
+                <!--h4 class="hours"><a href="https://libguides.bc.edu/hours">Hours</a></h4-->
+                <div class="hours-todays-date"></div>
+                <h4>This Week's Hours <span id="hours_seperator">|</span> <a href="https://libguides.bc.edu/hours">See All Hours</a></h4>
+                <!-- LIBCAL HOURS API-->
+                <div id="weekly_hours_container"></div>
+            </div>
 <!-- END HOURS -->
 
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 social-wrap">
