--- a/themes/burns-exhibits/layouts/partials/head.html
+++ b/themes/burns-exhibits/layouts/partials/head.html
@@ -49,5 +49,13 @@
   {{ end }}
 
   <script src="https://kit.fontawesome.com/768ae6e528.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3008279-16"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-3008279-16');
+</script>
 </head>
