--- a/themes/burns-exhibits/layouts/partials/hp-gallery.html
+++ b/themes/burns-exhibits/layouts/partials/hp-gallery.html
@@ -22,7 +22,7 @@
     <div class="row current_exhibits">
         
         <div class="col-12">
-            <h3>Current Exhibitss</h3>
+            <h3>Current Exhibits</h3>
         </div>
         
     <!-- TOP 2 LATEST EXHIBITS -->   
