update intro text

--- a/themes/burns-exhibits/layouts/partials/hp-gallery.html
+++ b/themes/burns-exhibits/layouts/partials/hp-gallery.html
@@ -8,7 +8,7 @@
 
         <div class="col-md-2">&nbsp;</div>
         <div class="col-md-8">
-        <p>John J. Burns Library develops and promotes exhibits featuring a wide variety of special collection formats, topics, and community interests. While we encourage everyone to <a href="https://libguides.bc.edu/burns/visit">visit our current exhibits</a> in person, online versions allow those unable to come to Chestnut Hill to engage with our special collections.</p>
+        <p>John J. Burns Library develops and promotes exhibits featuring a wide variety of special collection formats, topics, and community interests. Please explore our online exhibits and engage with our special collections.</p>
 
         <p>Have a question? <a href="https://libguides.bc.edu/burns/contact">Contact us</a>.</p>
 
