Reactivate featured exhibits

--- a/themes/burns-exhibits/layouts/partials/hp-gallery.html
+++ b/themes/burns-exhibits/layouts/partials/hp-gallery.html
@@ -22,7 +22,7 @@
     <div class="row current_exhibits">
         
         <div class="col-12">
-            <h3>Current Exhibits</h3>
+            <h3>Featured Exhibits</h3>
         </div>
         
     <!-- TOP 2 LATEST EXHIBITS -->   
@@ -31,7 +31,7 @@
         
         {{ $allcurrent:= where $alltheexhibits .Params.current true }}
 
-        {{ range $allcurrent }} 
+        {{ range $alltheexhibits | first 2 }} 	
 
             <div class="col-md-6 col-12">
                 
@@ -60,7 +60,7 @@
 
         {{ $allold:= where .Site.Pages "Kind" "section" }}
 
-        {{ range $allold | first 8 | }}
+        {{ range after 2 $allold | first 8 | }}
 
             <div class="col-md-3 col-6 oldgallery">
                 <a href=".{{ .RelPermalink }}" class="hp_img" 
